[package]
name = "cspreport"
version = "0.1.0"
authors = ["Jean-Philippe Bidegain <jp@bidega.in>"]
edition = "2018"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
clap = {version = "2.33", features = ["yaml"]}
lettre = "0.9"
lettre_email = "0.9"
dotenv = "0.15.0"
anyhow = "1.0"
enum-utils = "0.1.2"