[package]
name = "morbo"
version = "0.1.1"
authors = ["Jean-Philippe Bidegain <jp@bidega.in>"]
edition = "2018"
description = "A CSP Reporter"
license = "MIT"
homepage= "https://github.com/aeyoll/morbo"
exclude = [".github"]

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
clap = {version = "2.33", features = ["yaml"]}
dotenv = "0.15.0"
anyhow = "1.0"
enum-utils = "0.1.2"
lettre = {version = "0.9", optional = true }
lettre_email = {version = "0.9", optional = true }

[features]
mail = ["lettre", "lettre_email"]