[package]
name = "morbo"
version = "0.2.0"
authors = ["Jean-Philippe Bidegain <jp@bidega.in>"]
edition = "2021"
description = "A CSP Reporter"
license = "MIT"
homepage= "https://github.com/aeyoll/morbo"
exclude = [".github"]

[dependencies]
anyhow = "1.0"
axum = "0.5.15"
clap = { version = "3.2.17", features = ["derive"] }
dotenv = "0.15.0"
enum-utils = "0.1.2"
lettre = {version = "0.9", optional = true }
lettre_email = {version = "0.9", optional = true }
sentry_core = {version = "0.27", optional = true, package = "sentry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
mail = ["lettre", "lettre_email"]
sentry = ["sentry_core"]